<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddWaybillActivity">

  <LinearLayout
    android:id="@+id/root_layout_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="end"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/date"
        android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/linlay"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:minWidth="100dp"
        android:selectAllOnFocus="true"
        android:text="000001"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/txt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="text"
        android:text="@string/id_number"
        android:textSize="24sp" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/floating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:layout_gravity="end"
      android:text="@string/change_waybill"
      app:icon="@drawable/ic_upload" />

  </LinearLayout>
</ScrollView>